[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/MainMenu/Avatar.png" type="Texture" id=1]
[ext_resource path="res://Fonts/MainMenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Shaders/KirbyShader.tres" type="Material" id=3]
[ext_resource path="res://Scripts/MainMenu/PlayerInfo.gd" type="Script" id=4]

[node name="PlayerInfo" type="Control"]
margin_right = 128.0
margin_bottom = 41.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KirbySprite" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 10, 10 )
z_index = 1
texture = ExtResource( 1 )

[node name="KirbyButton" type="Button" parent="KirbySprite"]
margin_left = 12.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 2 )
text = "Kirby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="KirbySprite/KirbyButton"]
visible = false
margin_left = 41.0
margin_right = 101.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserNameButton" type="Button" parent="KirbySprite/KirbyButton/VBoxContainer"]
margin_right = 60.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
button_mask = 0
text = "User Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KickButton" type="Button" parent="KirbySprite/KirbyButton/VBoxContainer"]
margin_top = 19.0
margin_right = 60.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "Kick"
__meta__ = {
"_edit_use_anchors_": false
}
